refactor(pos): 도메인 중심의 계층형 아키텍처로 패키지 구조 재구성
- CardClient를 service.CardPaymentService로 명칭 변경 및 이동 (비즈니스 로직 역할 강화)
- 하드웨어 의존적인 VaultService를 infrastructure.vault 패키지로 분리
- 전역 상태 관리(ToggleService)를 service.config 하위로 그룹화
- 중복된 PaymentResult를 dto.response로 통합하여 레이어 간 인터페이스 통일
- Stream.toList() 적용을 통해 반환 데이터의 불변성 보장